--- a/frontend/src/stories/Configure.mdx
+++ b/frontend/src/stories/Configure.mdx
@@ -1,7 +1,8 @@
 import { Meta } from "@storybook/blocks";
 
 
-<Meta title="DrudeJSON" />
-<div>
-    The best Google Sheets extension out there
-</div>
+<Meta title="JSON Import & Export by Drudewerk" />
+<h1>JSON Import & Export by Drudewerk</h1>
+<p>
+    The JSON Import & Export by Drudewerk Add-On is a powerful tool designed to enhance your experience with Google Sheets™ by providing import and export capabilities for JSON files. With this add-on, you can easily integrate JSON data into your spreadsheets, making data analysis and manipulation more efficient and intuitive.
+</p>
